ISAICP-4665: Add fixes for floating images on mobile

--- a/web/themes/joinup/prototype/sass/components/_image-caption.sass
+++ b/web/themes/joinup/prototype/sass/components/_image-caption.sass
@@ -4,13 +4,23 @@
 // --------------------------------------------------
 .image-caption
   &.align-right
+    margin-left: 0
     margin-right: 0
+    float: none
+    +breakpoint(xs)
+      float: right
+      margin-left: 20px
   &.align-left
     margin-left: 0
+    margin-right: 0
+    float: none
+    +breakpoint(xs)
+      float: left
+      margin-right: 20px
   &.wysiwyg-one-third-width
-    width: percentage(1/3)
+    max-width: 306px
   &.wysiwyg-half-width
-    width: 50%
+    max-width: 460px
   figcaption
     font-size: $font-size-xsmall
   img
